--- a/4_Number_Game_miniproject.ipynb
+++ b/4_Number_Game_miniproject.ipynb
@@ -49,6 +49,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please Guess the number between 1 to 9: 4\n",
+      "\n",
+      "secret number: 5\n",
+      "guess number: 4\n",
+      "Player lose and 'Computer wins'.\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 1\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Please Guess the number between 1 to 9: 6\n",
+      "\n",
+      "secret number: 3\n",
+      "guess number: 6\n",
+      "Player lose and 'Computer wins'.\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 8\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 5\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Please Guess the number between 1 to 9: 1\n",
+      "\n",
+      "secret number: 1\n",
+      "guess number: 1\n",
+      "'Player wins' and Computer lose.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Challenge 3: Let people play again and again until he guesses the right secret number\n",
+    "\"\"\"\n",
+    "import random\n",
+    "while(True):\n",
+    "    secret= random.randrange(1,10)\n",
+    "    guess= int(input('Please Guess the number between 1 to 9: '))\n",
+    "    print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
+    "    if secret is guess:\n",
+    "        print(\"'Player wins' and Computer lose.\\n\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Player lose and 'Computer wins'.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
