--- a/4_Number_Game_miniproject.ipynb
+++ b/4_Number_Game_miniproject.ipynb
@@ -109,6 +109,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 4\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left: 5\n",
+      "Please Guess the number between 1 to 9: 3\n",
+      "\n",
+      "secret number: 6\n",
+      "guess number: 3\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left: 4\n",
+      "Please Guess the number between 1 to 9: 5\n",
+      "\n",
+      "secret number: 8\n",
+      "guess number: 5\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left: 3\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 1\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left: 2\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 3\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left: 1\n",
+      "Please Guess the number between 1 to 9: 1\n",
+      "\n",
+      "secret number: 4\n",
+      "guess number: 1\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Challenge 4: Limit the number of guesses to maximum 6 tries \n",
+    "Challenge 5: Print the number of tries left \n",
+    "\"\"\"\n",
+    "import random\n",
+    "n=5\n",
+    "while(True):\n",
+    "    secret= random.randrange(1,10)\n",
+    "    guess= int(input('Please Guess the number between 1 to 9: '))\n",
+    "    print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
+    "    if secret is guess:\n",
+    "        print(\"'Player wins' and Computer lose.\\n\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Player lose and 'Computer wins'.\")\n",
+    "    print('Number of tries left:',n)\n",
+    "    n=n-1\n",
+    "    \n",
+    "    if n<0:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
