--- a/4_Number_Game_miniproject.ipynb
+++ b/4_Number_Game_miniproject.ipynb
@@ -248,9 +248,8 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Challenge 7: Lets give user the option to play again\n",
+    "Challenge 6: Lets give user the option to play again\n",
     "\"\"\"\n",
-    "\n",
     "import random\n",
     "n=5\n",
     "while(True):\n",
@@ -280,10 +279,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 7\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left:  5\n",
+      "Please Guess the number between 1 to 9: 3\n",
+      "\n",
+      "secret number: 7\n",
+      "guess number: 3\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left:  4\n",
+      "Please Guess the number between 1 to 9: 4\n",
+      "\n",
+      "secret number: 2\n",
+      "guess number: 4\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left:  3\n",
+      "Please Guess the number between 1 to 9: hhkjh\n",
+      "\n",
+      "No valid integer! Please try again...\n",
+      "Please Guess the number between 1 to 9: 25\n",
+      "\n",
+      "Wrong input! Please try again...\n",
+      "Please Guess the number between 1 to 9: 5\n",
+      "\n",
+      "secret number: 2\n",
+      "guess number: 5\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left:  2\n",
+      "Please Guess the number between 1 to 9: 4\n",
+      "\n",
+      "secret number: 7\n",
+      "guess number: 4\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left:  1\n",
+      "Please Guess the number between 1 to 9: surj\n",
+      "\n",
+      "No valid integer! Please try again...\n",
+      "Please Guess the number between 1 to 9: 100\n",
+      "\n",
+      "Wrong input! Please try again...\n",
+      "Please Guess the number between 1 to 9: 4\n",
+      "\n",
+      "secret number: 3\n",
+      "guess number: 4\n",
+      "Player lose and 'Computer wins'.\n",
+      "Number of tries left:  0\n",
+      "\n",
+      "Do you want to play again?\n",
+      "Enter 'Y' for Yes and 'N' for No: n\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Challenge 7: Catch when someone submits a non integer\n",
+    "\"\"\"\n",
+    "import random\n",
+    "n=5\n",
+    "while(True):\n",
+    "    secret= random.randrange(1,10)\n",
+    "    while True:\n",
+    "        try:\n",
+    "            guess= int(input('Please Guess the number between 1 to 9: '))\n",
+    "            if guess in range(1,10):\n",
+    "                break\n",
+    "            else:\n",
+    "                print('\\nWrong input! Please try again...')\n",
+    "        except ValueError:\n",
+    "            print(\"\\nNo valid integer! Please try again...\")\n",
+    "        \n",
+    "    print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
+    "    if secret is guess:\n",
+    "        print(\"'Player wins' and Computer lose.\\n\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Player lose and 'Computer wins'.\")\n",
+    "    print('Number of tries left: ',n)\n",
+    "    n=n-1\n",
+    "    \n",
+    "    if n<0:\n",
+    "        choice= input(\"\\nDo you want to play again?\\nEnter 'Y' for Yes and 'N' for No: \")\n",
+    "        if choice=='Y' or choice =='y':\n",
+    "            n=5\n",
+    "        else:\n",
+    "            break\n",
+    "  "
+   ]
   },
   {
    "cell_type": "code",
