--- a/4_Number_Game_miniproject.ipynb
+++ b/4_Number_Game_miniproject.ipynb
@@ -49,42 +49,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please Guess the number between 1 to 9: 4\n",
+      "Please Guess the number between 1 to 9: 5\n",
       "\n",
-      "secret number: 5\n",
-      "guess number: 4\n",
+      "secret number: 6\n",
+      "guess number: 5\n",
       "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Challenge 3: Print too HIGH or too LOW messages for bad guesses using elif. \n",
+    "\"\"\"\n",
+    "import random\n",
+    "secret= random.randrange(1,10)\n",
+    "guess= int(input('Please Guess the number between 1 to 9: '))\n",
+    "print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
+    "if secret is guess:\n",
+    "    print(\"'Player wins' and Computer lose.\\n\")\n",
+    "elif secret is not guess:\n",
+    "    print(\"Player lose and 'Computer wins'.\")\n",
+    "    if secret< guess:\n",
+    "        print(\"Too HIGH Guess\")\n",
+    "    else:\n",
+    "        print(\"Too LOW Guess\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Please Guess the number between 1 to 9: 2\n",
       "\n",
-      "secret number: 1\n",
+      "secret number: 4\n",
       "guess number: 2\n",
       "Player lose and 'Computer wins'.\n",
-      "Please Guess the number between 1 to 9: 6\n",
+      "Too LOW Guess\n",
+      "Please Guess the number between 1 to 9: 3\n",
+      "\n",
+      "secret number: 9\n",
+      "guess number: 3\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Please Guess the number between 1 to 9: 7\n",
+      "\n",
+      "secret number: 2\n",
+      "guess number: 7\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 4\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Please Guess the number between 1 to 9: 8\n",
+      "\n",
+      "secret number: 9\n",
+      "guess number: 8\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Please Guess the number between 1 to 9: 9\n",
+      "\n",
+      "secret number: 2\n",
+      "guess number: 9\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 7\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Please Guess the number between 1 to 9: 3\n",
       "\n",
       "secret number: 3\n",
-      "guess number: 6\n",
-      "Player lose and 'Computer wins'.\n",
-      "Please Guess the number between 1 to 9: 2\n",
-      "\n",
-      "secret number: 8\n",
-      "guess number: 2\n",
-      "Player lose and 'Computer wins'.\n",
-      "Please Guess the number between 1 to 9: 2\n",
-      "\n",
-      "secret number: 5\n",
-      "guess number: 2\n",
-      "Player lose and 'Computer wins'.\n",
-      "Please Guess the number between 1 to 9: 1\n",
-      "\n",
-      "secret number: 1\n",
-      "guess number: 1\n",
+      "guess number: 3\n",
       "'Player wins' and Computer lose.\n",
       "\n"
      ]
@@ -92,7 +145,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Challenge 3: Let people play again and again until he guesses the right secret number\n",
+    "Challenge 4: Let people play again and again until he guesses the right secret number\n",
     "\"\"\"\n",
     "import random\n",
     "while(True):\n",
@@ -102,63 +155,72 @@
     "    if secret is guess:\n",
     "        print(\"'Player wins' and Computer lose.\\n\")\n",
     "        break\n",
-    "    else:\n",
+    "    elif secret is not guess:\n",
     "        print(\"Player lose and 'Computer wins'.\")\n",
-    "\n"
+    "        if secret< guess:\n",
+    "            print(\"Too HIGH Guess\")\n",
+    "        else:\n",
+    "            print(\"Too LOW Guess\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please Guess the number between 1 to 9: 2\n",
-      "\n",
-      "secret number: 4\n",
-      "guess number: 2\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left: 5\n",
-      "Please Guess the number between 1 to 9: 3\n",
-      "\n",
-      "secret number: 6\n",
-      "guess number: 3\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left: 4\n",
-      "Please Guess the number between 1 to 9: 5\n",
-      "\n",
-      "secret number: 8\n",
-      "guess number: 5\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left: 3\n",
-      "Please Guess the number between 1 to 9: 2\n",
-      "\n",
-      "secret number: 1\n",
-      "guess number: 2\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left: 2\n",
-      "Please Guess the number between 1 to 9: 2\n",
-      "\n",
-      "secret number: 3\n",
-      "guess number: 2\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left: 1\n",
       "Please Guess the number between 1 to 9: 1\n",
       "\n",
       "secret number: 4\n",
       "guess number: 1\n",
       "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left: 5\n",
+      "Please Guess the number between 1 to 9: 3\n",
+      "\n",
+      "secret number: 5\n",
+      "guess number: 3\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left: 4\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 3\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left: 3\n",
+      "Please Guess the number between 1 to 9: 5\n",
+      "\n",
+      "secret number: 1\n",
+      "guess number: 5\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Number of tries left: 2\n",
+      "Please Guess the number between 1 to 9: 4\n",
+      "\n",
+      "secret number: 9\n",
+      "guess number: 4\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left: 1\n",
+      "Please Guess the number between 1 to 9: 6\n",
+      "\n",
+      "secret number: 7\n",
+      "guess number: 6\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
       "Number of tries left: 0\n"
      ]
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Challenge 4: Limit the number of guesses to maximum 6 tries \n",
-    "Challenge 5: Print the number of tries left \n",
+    "Challenge 5: Limit the number of guesses to maximum 6 tries \n",
+    "Challenge 6: Print the number of tries left \n",
     "\"\"\"\n",
     "import random\n",
     "n=5\n",
@@ -169,8 +231,12 @@
     "    if secret is guess:\n",
     "        print(\"'Player wins' and Computer lose.\\n\")\n",
     "        break\n",
-    "    else:\n",
+    "    elif secret is not guess:\n",
     "        print(\"Player lose and 'Computer wins'.\")\n",
+    "        if secret< guess:\n",
+    "            print(\"Too HIGH Guess\")\n",
+    "        else:\n",
+    "            print(\"Too LOW Guess\")\n",
     "    print('Number of tries left:',n)\n",
     "    n=n-1\n",
     "    \n",
@@ -180,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -192,63 +258,97 @@
       "secret number: 7\n",
       "guess number: 1\n",
       "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  5\n",
-      "Please Guess the number between 1 to 9: 2\n",
-      "\n",
-      "secret number: 5\n",
-      "guess number: 2\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  4\n",
-      "Please Guess the number between 1 to 9: 3\n",
-      "\n",
-      "secret number: 5\n",
-      "guess number: 3\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  3\n",
-      "Please Guess the number between 1 to 9: 4\n",
-      "\n",
-      "secret number: 2\n",
-      "guess number: 4\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  2\n",
-      "Please Guess the number between 1 to 9: 5\n",
-      "\n",
-      "secret number: 1\n",
-      "guess number: 5\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  1\n",
-      "Please Guess the number between 1 to 9: 6\n",
-      "\n",
-      "secret number: 1\n",
-      "guess number: 6\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  0\n",
-      "Do you want to play again?\n",
-      "Enter 'Y' for Yes and 'N' for No: y\n",
-      "Please Guess the number between 1 to 9: 2\n",
-      "\n",
-      "secret number: 8\n",
-      "guess number: 2\n",
-      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
       "Number of tries left:  5\n",
       "Please Guess the number between 1 to 9: 2\n",
       "\n",
       "secret number: 9\n",
       "guess number: 2\n",
       "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left:  4\n",
+      "Please Guess the number between 1 to 9: 7\n",
+      "\n",
+      "secret number: 8\n",
+      "guess number: 7\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left:  3\n",
+      "Please Guess the number between 1 to 9: 8\n",
+      "\n",
+      "secret number: 2\n",
+      "guess number: 8\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Number of tries left:  2\n",
+      "Please Guess the number between 1 to 9: 9\n",
+      "\n",
+      "secret number: 2\n",
+      "guess number: 9\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Number of tries left:  1\n",
+      "Please Guess the number between 1 to 9: 8\n",
+      "\n",
+      "secret number: 6\n",
+      "guess number: 8\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Number of tries left:  0\n",
+      "\n",
+      "Do you want to play again?\n",
+      "Enter 'Y' for Yes and 'N' for No: y\n",
+      "Please Guess the number between 1 to 9: 1\n",
+      "\n",
+      "secret number: 9\n",
+      "guess number: 1\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left:  5\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 4\n",
+      "guess number: 2\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
       "Number of tries left:  4\n",
       "Please Guess the number between 1 to 9: 2\n",
       "\n",
-      "secret number: 2\n",
+      "secret number: 4\n",
       "guess number: 2\n",
-      "'Player wins' and Computer lose.\n",
-      "\n"
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left:  3\n",
+      "Please Guess the number between 1 to 9: 3\n",
+      "\n",
+      "secret number: 9\n",
+      "guess number: 3\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left:  2\n",
+      "Please Guess the number between 1 to 9: 4\n",
+      "\n",
+      "secret number: 7\n",
+      "guess number: 4\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
+      "Number of tries left:  1\n",
+      "Please Guess the number between 1 to 9: 5\n",
+      "\n",
+      "secret number: 3\n",
+      "guess number: 5\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Number of tries left:  0\n",
+      "\n",
+      "Do you want to play again?\n",
+      "Enter 'Y' for Yes and 'N' for No: n\n"
      ]
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Challenge 6: Lets give user the option to play again\n",
+    "Challenge 7: Lets give user the option to play again\n",
     "\"\"\"\n",
     "import random\n",
     "n=5\n",
@@ -263,13 +363,17 @@
     "    if secret is guess:\n",
     "        print(\"'Player wins' and Computer lose.\\n\")\n",
     "        break\n",
-    "    else:\n",
+    "    elif secret is not guess:\n",
     "        print(\"Player lose and 'Computer wins'.\")\n",
+    "        if secret< guess:\n",
+    "            print(\"Too HIGH Guess\")\n",
+    "        else:\n",
+    "            print(\"Too LOW Guess\")\n",
     "    print('Number of tries left: ',n)\n",
     "    n=n-1\n",
     "    \n",
     "    if n<0:\n",
-    "        choice= input(\"Do you want to play again?\\nEnter 'Y' for Yes and 'N' for No: \")\n",
+    "        choice= input(\"\\nDo you want to play again?\\nEnter 'Y' for Yes and 'N' for No: \")\n",
     "        if choice=='Y' or choice =='y':\n",
     "            n=5\n",
     "        else:\n",
@@ -279,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -288,61 +392,66 @@
      "text": [
       "Please Guess the number between 1 to 9: 2\n",
       "\n",
-      "secret number: 7\n",
+      "secret number: 4\n",
       "guess number: 2\n",
       "Player lose and 'Computer wins'.\n",
+      "Too LOW Guess\n",
       "Number of tries left:  5\n",
       "Please Guess the number between 1 to 9: 3\n",
       "\n",
-      "secret number: 7\n",
+      "secret number: 1\n",
       "guess number: 3\n",
       "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
       "Number of tries left:  4\n",
-      "Please Guess the number between 1 to 9: 4\n",
-      "\n",
-      "secret number: 2\n",
-      "guess number: 4\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  3\n",
-      "Please Guess the number between 1 to 9: hhkjh\n",
-      "\n",
-      "No valid integer! Please try again...\n",
-      "Please Guess the number between 1 to 9: 25\n",
-      "\n",
-      "Wrong input! Please try again...\n",
-      "Please Guess the number between 1 to 9: 5\n",
-      "\n",
-      "secret number: 2\n",
-      "guess number: 5\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  2\n",
-      "Please Guess the number between 1 to 9: 4\n",
-      "\n",
-      "secret number: 7\n",
-      "guess number: 4\n",
-      "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  1\n",
-      "Please Guess the number between 1 to 9: surj\n",
-      "\n",
-      "No valid integer! Please try again...\n",
-      "Please Guess the number between 1 to 9: 100\n",
-      "\n",
-      "Wrong input! Please try again...\n",
       "Please Guess the number between 1 to 9: 4\n",
       "\n",
       "secret number: 3\n",
       "guess number: 4\n",
       "Player lose and 'Computer wins'.\n",
-      "Number of tries left:  0\n",
+      "Too HIGH Guess\n",
+      "Number of tries left:  3\n",
+      "Please Guess the number between 1 to 9: 6\n",
       "\n",
-      "Do you want to play again?\n",
-      "Enter 'Y' for Yes and 'N' for No: n\n"
+      "secret number: 5\n",
+      "guess number: 6\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Number of tries left:  2\n",
+      "Please Guess the number between 1 to 9: 8\n",
+      "\n",
+      "secret number: 2\n",
+      "guess number: 8\n",
+      "Player lose and 'Computer wins'.\n",
+      "Too HIGH Guess\n",
+      "Number of tries left:  1\n",
+      "Please Guess the number between 1 to 9: suraj\n",
+      "\n",
+      "No valid integer! Please try again...\n",
+      "Please Guess the number between 1 to 9: 123\n",
+      "\n",
+      "Wrong input! Please try again...\n",
+      "Please Guess the number between 1 to 9: 200\n",
+      "\n",
+      "Wrong input! Please try again...\n",
+      "Please Guess the number between 1 to 9: fjfjh\n",
+      "\n",
+      "No valid integer! Please try again...\n",
+      "Please Guess the number between 1 to 9: 56\n",
+      "\n",
+      "Wrong input! Please try again...\n",
+      "Please Guess the number between 1 to 9: 2\n",
+      "\n",
+      "secret number: 2\n",
+      "guess number: 2\n",
+      "'Player wins' and Computer lose.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Challenge 7: Catch when someone submits a non integer\n",
+    "Challenge 8: Catch when someone submits a non integer\n",
     "\"\"\"\n",
     "import random\n",
     "n=5\n",
@@ -362,8 +471,12 @@
     "    if secret is guess:\n",
     "        print(\"'Player wins' and Computer lose.\\n\")\n",
     "        break\n",
-    "    else:\n",
+    "    elif secret is not guess:\n",
     "        print(\"Player lose and 'Computer wins'.\")\n",
+    "        if secret< guess:\n",
+    "            print(\"Too HIGH Guess\")\n",
+    "        else:\n",
+    "            print(\"Too LOW Guess\")\n",
     "    print('Number of tries left: ',n)\n",
     "    n=n-1\n",
     "    \n",
