--- a/4_Number_Game_miniproject.ipynb
+++ b/4_Number_Game_miniproject.ipynb
@@ -38,10 +38,10 @@
     "    Print the secret number and guess number when Player loses using format function \n",
     "\"\"\"\n",
     "import random\n",
-    "secret= random.randrange(1,10)\n",
-    "guess= int(input('Please Guess the number between 1 to 9: '))\n",
+    "secret= random.randrange(1,10)         # generating random number\n",
+    "guess= int(input('Please Guess the number between 1 to 9: '))     # get the response from user\n",
     "print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
-    "if secret is guess:\n",
+    "if secret is guess:                    # comparing the numbers\n",
     "    print(\"'Player wins' and Computer lose.\\n\")\n",
     "else:\n",
     "    print(\"Player lose and 'Computer wins'.\")\n"
@@ -70,10 +70,10 @@
     "Challenge 3: Print too HIGH or too LOW messages for bad guesses using elif. \n",
     "\"\"\"\n",
     "import random\n",
-    "secret= random.randrange(1,10)\n",
-    "guess= int(input('Please Guess the number between 1 to 9: '))\n",
+    "secret= random.randrange(1,10)           # generating random number\n",
+    "guess= int(input('Please Guess the number between 1 to 9: '))     # get the response from user\n",
     "print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
-    "if secret is guess:\n",
+    "if secret is guess:                      # comparing the numbers\n",
     "    print(\"'Player wins' and Computer lose.\\n\")\n",
     "elif secret is not guess:\n",
     "    print(\"Player lose and 'Computer wins'.\")\n",
@@ -149,10 +149,10 @@
     "\"\"\"\n",
     "import random\n",
     "while(True):\n",
-    "    secret= random.randrange(1,10)\n",
-    "    guess= int(input('Please Guess the number between 1 to 9: '))\n",
+    "    secret= random.randrange(1,10)         # generating random number\n",
+    "    guess= int(input('Please Guess the number between 1 to 9: '))    # get the response from user\n",
     "    print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
-    "    if secret is guess:\n",
+    "    if secret is guess:                    # comparing the numbers\n",
     "        print(\"'Player wins' and Computer lose.\\n\")\n",
     "        break\n",
     "    elif secret is not guess:\n",
@@ -225,10 +225,10 @@
     "import random\n",
     "n=5\n",
     "while(True):\n",
-    "    secret= random.randrange(1,10)\n",
-    "    guess= int(input('Please Guess the number between 1 to 9: '))\n",
+    "    secret= random.randrange(1,10)           # generating random number\n",
+    "    guess= int(input('Please Guess the number between 1 to 9: '))     # get the response from user\n",
     "    print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
-    "    if secret is guess:\n",
+    "    if secret is guess:                      # comparing the numbers\n",
     "        print(\"'Player wins' and Computer lose.\\n\")\n",
     "        break\n",
     "    elif secret is not guess:\n",
@@ -237,7 +237,7 @@
     "            print(\"Too HIGH Guess\")\n",
     "        else:\n",
     "            print(\"Too LOW Guess\")\n",
-    "    print('Number of tries left:',n)\n",
+    "    print('Number of tries left:',n)         # printing no. of available tries\n",
     "    n=n-1\n",
     "    \n",
     "    if n<0:\n",
@@ -353,14 +353,14 @@
     "import random\n",
     "n=5\n",
     "while(True):\n",
-    "    secret= random.randrange(1,10)\n",
-    "    guess= int(input('Please Guess the number between 1 to 9: '))\n",
-    "    if guess not in range(1,10):\n",
+    "    secret= random.randrange(1,10)          # generating random number\n",
+    "    guess= int(input('Please Guess the number between 1 to 9: '))     # get the response from user\n",
+    "    if guess not in range(1,10):            # checking if guess number in the range or not to catch error\n",
     "        print('\\nWrong input! Please try again...')\n",
     "        break\n",
     "        \n",
     "    print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
-    "    if secret is guess:\n",
+    "    if secret is guess:                     # comparing the numbers  \n",
     "        print(\"'Player wins' and Computer lose.\\n\")\n",
     "        break\n",
     "    elif secret is not guess:\n",
@@ -369,10 +369,10 @@
     "            print(\"Too HIGH Guess\")\n",
     "        else:\n",
     "            print(\"Too LOW Guess\")\n",
-    "    print('Number of tries left: ',n)\n",
+    "    print('Number of tries left: ',n)       # printing no. of available tries\n",
     "    n=n-1\n",
     "    \n",
-    "    if n<0:\n",
+    "    if n<0:                                 # asking again to user to play another time or not\n",
     "        choice= input(\"\\nDo you want to play again?\\nEnter 'Y' for Yes and 'N' for No: \")\n",
     "        if choice=='Y' or choice =='y':\n",
     "            n=5\n",
@@ -456,11 +456,11 @@
     "import random\n",
     "n=5\n",
     "while(True):\n",
-    "    secret= random.randrange(1,10)\n",
+    "    secret= random.randrange(1,10)         # generating random number\n",
     "    while True:\n",
-    "        try:\n",
-    "            guess= int(input('Please Guess the number between 1 to 9: '))\n",
-    "            if guess in range(1,10):\n",
+    "        try:                               # using try method to handle non integer values\n",
+    "            guess= int(input('Please Guess the number between 1 to 9: '))    # get the response from user\n",
+    "            if guess in range(1,10):       # checking if guess number in the range or not to catch error\n",
     "                break\n",
     "            else:\n",
     "                print('\\nWrong input! Please try again...')\n",
@@ -468,7 +468,7 @@
     "            print(\"\\nNo valid integer! Please try again...\")\n",
     "        \n",
     "    print('\\nsecret number: {}\\nguess number: {}'.format(secret,guess))\n",
-    "    if secret is guess:\n",
+    "    if secret is guess:                     # comparing the numbers\n",
     "        print(\"'Player wins' and Computer lose.\\n\")\n",
     "        break\n",
     "    elif secret is not guess:\n",
@@ -477,10 +477,10 @@
     "            print(\"Too HIGH Guess\")\n",
     "        else:\n",
     "            print(\"Too LOW Guess\")\n",
-    "    print('Number of tries left: ',n)\n",
+    "    print('Number of tries left: ',n)       # printing no. of available tries\n",
     "    n=n-1\n",
     "    \n",
-    "    if n<0:\n",
+    "    if n<0:                                 # asking again to user to play another time or not\n",
     "        choice= input(\"\\nDo you want to play again?\\nEnter 'Y' for Yes and 'N' for No: \")\n",
     "        if choice=='Y' or choice =='y':\n",
     "            n=5\n",
