--- a/HandsOn_string.ipynb
+++ b/HandsOn_string.ipynb
@@ -42,11 +42,11 @@
     "li= ['rock','paper','scissors']\n",
     "print(random.choice(li))\n",
     "\n",
-    "# choice() :- used to generate 1 random number from a container.\n",
-    "# randrange(beg, end, step) :- used to generate random number(integer) but within a range specified in its arguments\n",
-    "# shuffle() :- used to shuffle the entire list to randomly arrange them.\n",
-    "# uniform(a, b) :- used to generate a floating point random number between the numbers mentioned in its arguments.\n",
-    "# random() :- used to generate a float random number less than 1 and greater or equal to 0."
+    "# choice():- used to generate 1 random number from a container.\n",
+    "# randrange(beg,end,step):- used to generate random number(integer) but within a range specified in its arguments\n",
+    "# shuffle():- used to shuffle the entire list to randomly arrange them.\n",
+    "# uniform(a,b):- used to generate a floating point random number between the numbers mentioned in its arguments.\n",
+    "# random():- used to generate a float random number less than 1 and greater or equal to 0."
    ]
   },
   {
@@ -156,6 +156,102 @@
     "\n",
     "# Print Technologies Forsk using slicing ( Reverse indexing Right to Left ) \n",
     "print(str2[-(n-ind)+1:]+' '+str2[-n:-(n-ind)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Mixing of strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first string: dog\n",
+      "Enter second string: dinner\n",
+      "dig donner\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Given strings a and b, return a single string with a and b separated\n",
+    "# by a space '<a> <b>', except swap the first 2 chars of each string.\n",
+    "# e.g. 'mix', pod' -> 'pox mid' and 'dog', 'dinner' -> 'dig donner'\n",
+    "# Assume a and b are length 2 or more.\n",
+    "\n",
+    "a= input('Enter first string: ')\n",
+    "b= input('Enter second string: ') \n",
+    "print(b[0:2]+a[2:]+' '+a[0:2]+b[2:])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Count number of words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentence: My name is Silvester\n",
+      "Number of words: 4\n",
+      "Reverse of sentence: retsevliS si eman yM\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of words in a sentence.\n",
+    "# input: 'My name is Silvester'\n",
+    "\n",
+    "sent= input('Enter the sentence: ')\n",
+    "print('Number of words:',sent.count(' ')+1)\n",
+    "\n",
+    "# Display a sentence backwards after entered.\n",
+    "print('Reverse of sentence:',sent[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Disappear letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: babble\n",
+      "ba**le\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Given a string s, print the string again where all occurences of its first char have been \n",
+    "# changed to '*', except do not change the first char itself. e.g. 'babble' yields 'ba**le'\n",
+    "\n",
+    "str2= input('Enter the string: ')\n",
+    "str3= str2[0]+str2[1:].replace(str2[0],'*')\n",
+    "print(str3)"
    ]
   },
   {
