--- a/HandsOn_string.ipynb
+++ b/HandsOn_string.ipynb
@@ -255,6 +255,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. 'not' and 'bad'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: This dinner is not that bad!\n",
+      "This dinner is good\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Given a string, find the first appearance of the substring 'not' and 'bad'. If the \n",
+    "#'bad' follows the 'not', replace the whole 'not'...'bad' substring with 'good'.\n",
+    "# eg. 'This dinner is not that bad!' yields:'This dinner is good!'\n",
+    "\n",
+    "string= input('Enter the string: ')\n",
+    "not_i= string.find('not')\n",
+    "bad_i= string.find('bad') \n",
+    "if bad_i > not_i and not_i>0 and bad_i>0:\n",
+    "    print(string.replace(string[not_i:],'good'))\n",
+    "else:\n",
+    "    print(string)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Messy salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the salary: $876,001\n",
+      "876001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean the Messy salary into integers for Data Processing\n",
+    "# input: '$876,001'\n",
+    "\n",
+    "salary = input('Enter the salary: ')\n",
+    "clean_sal= int(salary.strip('$').replace(',',''))\n",
+    "print(clean_sal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Donut count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter donut count: 13\n",
+      "Number of donuts: many\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Take donut count from the user and print a string of the form 'Number of donuts: <count>' \n",
+    "# where <count> is the donut count entered by the user. However, if the count is 10 or more,\n",
+    "# then use the word 'many' instead of the actual count.\n",
+    "\n",
+    "donut= input('Enter donut count: ')\n",
+    "if int(donut)>= 10:\n",
+    "    print('Number of donuts: many')\n",
+    "else:\n",
+    "    print('Number of donuts: {}'.format(donut))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
