Added a new file

--- a/HandsOn_string.ipynb
+++ b/HandsOn_string.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -346,10 +346,127 @@
     "# then use the word 'many' instead of the actual count.\n",
     "\n",
     "donut= input('Enter donut count: ')\n",
-    "if int(donut)>= 10:\n",
-    "    print('Number of donuts: many')\n",
+    "print('Number of donuts: many') if int(donut)>= 10 else print('Number of donuts: {}'.format(donut))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. First 2, Last 2 char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: spring\n",
+      "spng\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print a string made of the first 2 and the last 2 chars of the original string. \n",
+    "# However, if the string length is less than 2,return instead the empty string.\n",
+    "# input: 'spring'\n",
+    "\n",
+    "str1= input('Enter the string: ')\n",
+    "n= len(str1)\n",
+    "print(str1) if n <2 else print(str1[:2]+str1[-2:])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10. Add 'ing' or 'ly'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: increasing\n",
+      "increasingly\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Given a string, if its length is at least 3, add 'ing' to its end.Unless it already ends in 'ing',\n",
+    "# in which case add 'ly' instead.If the string length is less than 3, leave it unchanged.\n",
+    "# input: 'increasing'\n",
+    "str2= input('Enter string: ')\n",
+    "n= len(str2)\n",
+    "if n<3:\n",
+    "    print(str2)\n",
     "else:\n",
-    "    print('Number of donuts: {}'.format(donut))"
+    "    if str2[-3:]=='ing':\n",
+    "        print(str2+'ly')\n",
+    "    else:\n",
+    "        print(str2+'ing')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11. Dividing string into two halves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: carrot\n",
+      "Enter string: doing\n",
+      "['car', 'rot'] ['doi', 'ng']\n",
+      "cardoirotng\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If the length is even, the front and back halves are the same length.\n",
+    "# If the length is odd, we'll say that the extra char goes in the front half.\n",
+    "# e.g. 'abcde', the front half is 'abc', the back half 'de'.\n",
+    "# Given 2 strings, a and b, return a string of the form\n",
+    "# a-front + b-front + a-back + b-back\n",
+    "# input: 'carrot' and 'doing'\n",
+    "\n",
+    "a= input('Enter string: ')\n",
+    "b= input('Enter string: ')\n",
+    "\n",
+    "def halves(c):\n",
+    "    c_len= len(c)\n",
+    "    if c_len%2 != 0:\n",
+    "        c_n= int((c_len+1)/2)\n",
+    "        c_front= c[:c_n]\n",
+    "        c_back= c[c_n:]\n",
+    "    else:\n",
+    "        c_n= int(c_len/2)\n",
+    "        c_front= c[:c_n]\n",
+    "        c_back= c[c_n:]\n",
+    "    return [c_front, c_back]    \n",
+    "\n",
+    "lista= halves(a)\n",
+    "listb= halves(b) \n",
+    "print(lista,listb)    \n",
+    "print(lista[0] + listb[0] + lista[1] + listb[1])\n"
    ]
   },
   {
