--- a/HandsOn_list.ipynb
+++ b/HandsOn_list.ipynb
@@ -260,6 +260,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Clean the Messy salaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salaries: [876001, 543903, 2453896]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean the Messy salaries into integers for Data Processing\n",
+    "\n",
+    "salaries = ['$876,001', '$543,903', '$2453,896'] \n",
+    "for index, num in enumerate(salaries):\n",
+    "    salaries[index]= int(num.replace('$','').replace(',',''))\n",
+    "    \n",
+    "print('salaries:',salaries)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Fibonacci series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229, 832040, 1346269, 2178309, 3524578, 5702887, 9227465, 14930352, 24157817, 39088169, 63245986, 102334155, 165580141, 267914296, 433494437, 701408733, 1134903170, 1836311903, 2971215073, 4807526976, 7778742049]\n",
+      "\n",
+      "Enter the position to know the Fibonacci value: 39\n",
+      "Fibonacci value: 39088169\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of Fibonacci numbers up to the 50th term.\n",
+    "# The program will then ask the user for which position in the sequence\n",
+    "# they want to know the Fibonacci value for\n",
+    "# The Fibonacci sequence was originally used as a basic model for rabbit population growth:  \n",
+    "\n",
+    "lis= [0,1]\n",
+    "for i in range(2,50):\n",
+    "    lis.append(lis[i-1]+ lis[i-2])\n",
+    "print(lis)\n",
+    "\n",
+    "pos= int(input('\\nEnter the position to know the Fibonacci value: '))\n",
+    "print('Fibonacci value:',lis[pos-1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. Count strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of desired string: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Given a list of strings, return the count of the number of strings where the string\n",
+    "# length is 2 or more and the first and last chars of the string are the same.\n",
+    "\n",
+    "#words = ['', 'x', 'xy', 'xyx', 'xx']\n",
+    "#words = ['aaa', 'be', 'abc', 'hello']\n",
+    "words = ['aba', 'xyz', 'aa', 'x', 'bbb']\n",
+    "\n",
+    "count= 0\n",
+    "for name in words:\n",
+    "    length= len(name)\n",
+    "    if length>=2 and name[0]==name[-1]:\n",
+    "            count=count+1\n",
+    "\n",
+    "print('Number of desired string:',count)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
