--- a/HandsOn_list.ipynb
+++ b/HandsOn_list.ipynb
@@ -366,6 +366,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10. Sort the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['xyz', 'xanadu'] ['mix', 'apple', 'aardvark']\n",
+      "['xyz', 'xanadu'] ['mix', 'apple', 'aardvark']\n",
+      "Sorted list: ['xanadu', 'xyz', 'aardvark', 'apple', 'mix']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Given a list, return a list with the strings in sorted order, except group all the strings that begin with 'x'\n",
+    "# first. e.g. ['mix', 'xyz', 'apple', 'xanadu', 'aardvark'] yields ['xanadu', 'xyz', 'aardvark', 'apple', 'mix']\n",
+    "# Hint: this can be done by making 2 lists and sorting each of them before combining them.\n",
+    "\n",
+    "#words =['bbb', 'ccc', 'axx', 'xzz', 'xaa']\n",
+    "#words =['ccc', 'bbb', 'aaa', 'xcc', 'xaa']\n",
+    "words =['mix', 'xyz', 'apple', 'xanadu', 'aardvark']\n",
+    "\n",
+    "list1= [item for item in words if item[0]=='x']    # list comprehension but with more time complexity\n",
+    "list2= [item for item in words if item[0]!='x']    # 2 loops run for n times\n",
+    "print(list1,list2)\n",
+    "\n",
+    "'''Or'''\n",
+    "\n",
+    "stlist1= []\n",
+    "stlist2= []\n",
+    "for name in words:           # low complexity, only 1 loop run for n times\n",
+    "    if name[0]=='x':\n",
+    "        stlist1.append(name)\n",
+    "    else:\n",
+    "        stlist2.append(name)\n",
+    "print(stlist1,stlist2)     \n",
+    "\n",
+    "\n",
+    "words= sorted(list1)+ sorted(list2)\n",
+    "print('Sorted list:',words)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
