--- a/HandsOn_list.ipynb
+++ b/HandsOn_list.ipynb
@@ -417,6 +417,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11. Remove multiple occurrence of elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the elements: 4 3 9 8 5 4 3 8 6 6 1\n",
+      "{'1', '6', '8', '9', '5', '3', '4'}\n",
+      "['4', '3', '9', '8', '5', '6', '1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Given a list of numbers, return a list where all adjacent == elements have been reduced to a single element,\n",
+    "# so [1, 2, 2, 3] returns [1, 2, 3]. You may create a new list or modify the passed in list.\n",
+    "#nums = [1, 2, 2, 3, 1, 5, 5]\n",
+    "#nums = [1, 2, 2, 3, 3, 3, 6, 8, 2, 6, 8, 9]\n",
+    "\n",
+    "nums= input('Enter the elements: ').split()\n",
+    "s= set(nums)       # using set,order change\n",
+    "print(s)\n",
+    "\n",
+    "'''Or'''\n",
+    "\n",
+    "list2=[]           # order remain same     \n",
+    "for item in nums:\n",
+    "    if item not in list2:\n",
+    "        list2.append(item)\n",
+    "print(list2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
