--- a/HandsOn_list.ipynb
+++ b/HandsOn_list.ipynb
@@ -439,8 +439,8 @@
     }
    ],
    "source": [
-    "# Given a list of numbers, return a list where all adjacent == elements have been reduced to a single element,\n",
-    "# so [1, 2, 2, 3] returns [1, 2, 3]. You may create a new list or modify the passed in list.\n",
+    "# Given a list of numbers, return a list where all adjacent == elements have been reduced to a single\n",
+    "# element, so [1, 2, 2, 3] returns [1, 2, 3]. You may create a new list or modify the passed in list.\n",
     "#nums = [1, 2, 2, 3, 1, 5, 5]\n",
     "#nums = [1, 2, 2, 3, 3, 3, 6, 8, 2, 6, 8, 9]\n",
     "\n",
@@ -455,6 +455,60 @@
     "    if item not in list2:\n",
     "        list2.append(item)\n",
     "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12. Number of days in specific month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the year: 2020\n",
+      "Enter the specific month: feb\n",
+      "Leap year\n",
+      "Number of days in this month: 29\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make a function days_in_month to return the number of days in a specific month of a year\n",
+    "\n",
+    "def days_in_month(year,month):\n",
+    "    month_lp= {'jan':31,'feb':29,'march':31,'april':30,'may':31,'june':30,'july':31,'aug':31,'sept':30,'oct':31,'nov':30,'dec':31}\n",
+    "    month_nlp= {'jan':31,'feb':28,'march':31,'april':30,'may':31,'june':30,'july':31,'aug':31,'sept':30,'oct':31,'nov':30,'dec':31}\n",
+    "    flag= 0          # not leap year\n",
+    "    \n",
+    "    if year%400==0:\n",
+    "        print('Leap year')\n",
+    "        flag= 1\n",
+    "    elif year%100==0:\n",
+    "        print('Not a Leap year')\n",
+    "    elif year%4==0:\n",
+    "        print('Leap year')\n",
+    "        flag=1\n",
+    "    else:\n",
+    "        print('Not a Leap year')\n",
+    "        \n",
+    "    if flag!=0:\n",
+    "        return month_lp[month]\n",
+    "    else:\n",
+    "        return month_nlp[month]\n",
+    "\n",
+    "    \n",
+    "yr= int(input('Enter the year: '))\n",
+    "month= input('Enter the specific month: ')\n",
+    "print('Number of days in this month:',days_in_month(yr,month))\n",
+    "\n"
    ]
   },
   {
