--- a/HandsOn_list.ipynb
+++ b/HandsOn_list.ipynb
@@ -517,6 +517,51 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter \"street\": 220 Mansarovar\n",
+      "Enter \"city\": Jaipur\n",
+      "Enter \"state\": Rajasthan\n",
+      "Enter \"zip\": 302017\n",
+      "Address: {'street': '220 Mansarovar', 'city': 'Jaipur', 'state': 'Rajasthan', 'zip': '302017'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dictionary myaddress. Choose relevant keys, and separate your address into \n",
+    "  street address, city, state, and postal code portions, all of which \n",
+    "# are strings (for your ZIP Code, don’t enter it in as a number).\n",
+    "\n",
+    "#myaddress = {'street':'3225 West Foster Avenue','city':'Chicago', 'state':'IL','zip':'60625'}\n",
+    "lis1= ['street','city','state','zip']\n",
+    "address= {}\n",
+    "for item in lis1:\n",
+    "    address[item]= input('Enter \"{}\": '.format(item))\n",
+    "\n",
+    "print('Address:',address)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
